Update and rename index1.html to knacka.html

--- a/knacka.html
+++ b/knacka.html
@@ -117,10 +117,10 @@ FOOTER{
 <dd class="inline">M</dd>
 
 <dt class="inline">Nachname:</dt>
-<dd class="inline">R</dd>
+<dd class="inline">K</dd>
 
 <dt class="inline">Geburtsjahr:</dt>
-<dd class="inline">1992</dd>
+<dd class="inline">1993</dd>
 
 <dt>Getestet am:</dt>
 <dd><span>06.04.2021 08:47</span><br>
@@ -128,8 +128,8 @@ FOOTER{
 <script>
 	testdatum = new Date();
 	testdatum.setDate(testdatum.getDate() - 1)
-	testdatum.setHours (8);
-	testdatum.setMinutes (35);
+	testdatum.setHours (16);
+	testdatum.setMinutes (15);
 	tag=testdatum.getDate();
 	monat=(testdatum.getMonth()+1);
 	jahr=testdatum.getFullYear();
@@ -151,8 +151,8 @@ FOOTER{
 <script>
 	testdatum = new Date();
 	testdatum.setDate(testdatum.getDate() - 1)
-	testdatum.setHours (8);
-	testdatum.setMinutes (35);
+	testdatum.setHours (16);
+	testdatum.setMinutes (15);
 	testdatum.setSeconds(0);
 	aktdatum = new Date();
 	aktdatum.setDate(aktdatum.getDate());
@@ -167,8 +167,8 @@ FOOTER{
 <script>
 	ablaufdatum = new Date();
 	ablaufdatum.setDate(ablaufdatum.getDate() + 1)
-	ablaufdatum.setHours (8);
-	ablaufdatum.setMinutes (35);
+	ablaufdatum.setHours (16);
+	ablaufdatum.setMinutes (15);
 	tag=ablaufdatum.getDate();
 	monat=(ablaufdatum.getMonth()+1);
 	jahr=ablaufdatum.getFullYear();
@@ -190,8 +190,8 @@ FOOTER{
 <script>
 	ablaufdatum = new Date();
 	ablaufdatum.setDate(ablaufdatum.getDate() + 1)
-	ablaufdatum.setHours (8);
-	ablaufdatum.setMinutes (35);
+	ablaufdatum.setHours (16);
+	ablaufdatum.setMinutes (15);
 	ablaufdatum.setSeconds(0);
 	aktdatum = new Date();
 	aktdatum.setDate(aktdatum.getDate());
@@ -207,8 +207,8 @@ FOOTER{
 <script>
 	ablaufdatum = new Date();
 	ablaufdatum.setDate(ablaufdatum.getDate() + 6)
-	ablaufdatum.setHours (15);
-	ablaufdatum.setMinutes (35);
+	ablaufdatum.setHours (16);
+	ablaufdatum.setMinutes (15);
 	tag=ablaufdatum.getDate();
 	monat=(ablaufdatum.getMonth()+1);
 	jahr=ablaufdatum.getFullYear();
